k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-streamlit-service
  labels:
    app: portfolio-streamlit
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8501
    nodePort: 30000
    protocol: TCP
  selector:
    app: portfolio-streamlit
